# command_kernel

./: .gitignore  pyproject.toml
examples/: kernel.py
src/: command_kernel.py  tempdir_kernel.py
src/kernel_spec/tempdir/: kernel.json
tests/: test_base_kernel.py  test_environment.py  test_meta.py
