[build-system]
requires = ["hatchling", "ipykernel"]
build-backend = "hatchling.build"

[project]
name = "command_kernel"
version = "0.0.0"
dependencies = [
    "bash_kernel==0.10.0"
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/command_kernel.py",
    "src/tempdir_kernel.py"
]

[tool.hatch.build.targets.wheel.shared-data]
"src/kernel_spec" = "share/jupyter/kernels"
